2014-06-15  Andy Buckley  <andy.buckley@cern.ch>

	* Flavour thresholds in alpha_s solvers, and threshold subgrids from ODE solver (by Karl Nordstrom)

	* Add Python mapping of the AlphaS interface (but no setting... yet).

	* Add accessors to a PDF's AlphaS object and to an AlphaS' QCD order.

2014-06-12  Andy Buckley  <andy.buckley@cern.ch>

	* Bump version number for next release.

	* Add mapping of reweighting functions into Python.

2014-06-11  Andy Buckley  <andy.buckley@cern.ch>

	* Fix compiler warnings re. unused variables in LHAGlue.h and AlphaS.h headers.

2014-06-09  David Grellscheid  <david.grellscheid@durham.ac.uk>

	* Fix attempted use of non-existent std::vector::find method.

2014-05-29  Andy Buckley  <andy.buckley@cern.ch>

	* Change source name of analyticpdf example.

	* Adding a mini-constructor to PDF to make sure that _forcePos is
	set to a sane default value.

2014-05-28  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.2 release!

2014-05-28  James Ferrando <james.ferrando@glasgow.ac.uk>

	* Fix HWLHAPDF behaviour in pdfset

2014-05-27  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.1 release!

2014-05-26  James Ferrando <james.ferrando@glasgow.ac.uk>

	* Modify printout in PDFLIB backwards compatibility routine to
	avoid confusion for some HERWIG use cases

2014-05-22  Andy Buckley  <andy.buckley@cern.ch>

	* Adding warnings about mismatching alpha_s in reweighting, with a default tolerance of 5%.

2014-05-20  Andy Buckley  <andy.buckley@cern.ch>

	* Add LHAPDF/Reweighting.h with a few handy functions for doing 'naive' PDF reweighting.

2014-05-19  Andy Buckley  <andy.buckley@cern.ch>

	* Replace all internal uses of "foreach" with explicit BOOST_FOREACH until C++11.

2014-05-17  Andy Buckley  <andy.buckley@cern.ch>

	* Remigrate all NNPDF sets to remove duplicate Qmax points.

2014-05-10  Andy Buckley  <andy.buckley@cern.ch>

	* Adding initLHAPDF() and a few other do-nothing compatibility functions.
