@@ -65,8 +65,9 @@ cdef class PDF:
 
     def alphaS(self):
         "Get the AlphaS object used to calculate alpha_s(q)"
+        cdef c.AlphaS* ptr = &self._ptr.alphaS()
         cdef AlphaS obj = AlphaS.__new__(AlphaS)
-        obj.set_ptr(&(self._ptr.alphaS()))
+        obj.set_ptr(ptr)
         return obj
 
     def alphasQ(self, q):
@@ -348,45 +349,44 @@ cdef class AlphaS:
         self._ptr = ptr
 
     def __dealloc__(self):
-        #del self._ptr
         pass
 
-    def type(self):
-        "Get the method of alpha_s calculation as a string"
-        return self._ptr.type()
+    # def type(self):
+    #     "Get the method of alpha_s calculation as a string"
+    #     return self._ptr.type()
 
 
-    def alphasQ(self, double q):
-        "Get alpha_s value at scale q"
-        return self._ptr.alphasQ(q)
+    # def alphasQ(self, double q):
+    #     "Get alpha_s value at scale q"
+    #     return self._ptr.alphasQ(q)
 
-    def alphasQ2(self, double q2):
-        "Get alpha_s value at scale q"
-        return self._ptr.alphasQ2(q2)
+    # def alphasQ2(self, double q2):
+    #     "Get alpha_s value at scale q"
+    #     return self._ptr.alphasQ2(q2)
 
-    def numFlavorsQ(self, double q):
-        "Get number of active flavors at scale q"
-        return self._ptr.numFlavorsQ(q)
+    # def numFlavorsQ(self, double q):
+    #     "Get number of active flavors at scale q"
+    #     return self._ptr.numFlavorsQ(q)
 
-    def numFlavorsQ2(self, double q2):
-        "Get number of active flavors at scale q"
-        return self._ptr.numFlavorsQ2(q2)
+    # def numFlavorsQ2(self, double q2):
+    #     "Get number of active flavors at scale q"
+    #     return self._ptr.numFlavorsQ2(q2)
 
-    def quarkMass(self, int id):
-        "Get mass of quark with PID code id"
-        return self._ptr.quarkMass(id)
+    # def quarkMass(self, int id):
+    #     "Get mass of quark with PID code id"
+    #     return self._ptr.quarkMass(id)
 
-    def setQuarkMass(self, int id, double value):
-        "Set mass of quark with PID code id"
-        self._ptr.setQuarkMass(id, value)
+    # def setQuarkMass(self, int id, double value):
+    #     "Set mass of quark with PID code id"
+    #     self._ptr.setQuarkMass(id, value)
 
-    def quarkThreshold(self, int id):
-        "Get activation threshold of quark with PID code id"
-        return self._ptr.quarkThreshold(id)
+    # def quarkThreshold(self, int id):
+    #     "Get activation threshold of quark with PID code id"
+    #     return self._ptr.quarkThreshold(id)
 
-    def setQuarkThreshold(self, int id, double value):
-        "Set activation threshold of quark with PID code id"
-        self._ptr.setQuarkThreshold(id, value)
+    # def setQuarkThreshold(self, int id, double value):
+    #     "Set activation threshold of quark with PID code id"
+    #     self._ptr.setQuarkThreshold(id, value)
 
     def orderQCD(self):
         "Get the QCD running order (max num loops) for this alphaS"
@@ -396,21 +396,21 @@ cdef class AlphaS:
         "Set the QCD running order (max num loops) for this alphaS"
         self._ptr.setOrderQCD(order)
 
-    def setMZ(self, double mz):
-        "Set the Z mass (used in ODE solver)"
-        self._ptr.setMZ(mz)
+    # def setMZ(self, double mz):
+    #     "Set the Z mass (used in ODE solver)"
+    #     self._ptr.setMZ(mz)
 
-    def setAlphaSMZ(self, double alphas):
-        "Set alpha_s at the Z mass (used in ODE solver)"
-        self._ptr.setAlphaSMZ(alphas)
+    # def setAlphaSMZ(self, double alphas):
+    #     "Set alpha_s at the Z mass (used in ODE solver)"
+    #     self._ptr.setAlphaSMZ(alphas)
 
-    def setLambda(self, int id, double val):
-        "Set the id'th LambdaQCD value (used in analytic solver)"
-        self._ptr.setLambda(id, val)
+    # def setLambda(self, int id, double val):
+    #     "Set the id'th LambdaQCD value (used in analytic solver)"
+    #     self._ptr.setLambda(id, val)
 
-    # enum FlavorScheme { FIXED, VARIABLE };
-    # void setFlavorScheme(self, FlavorScheme scheme, int nf)
-    # FlavorScheme flavorScheme(self)
+    # # enum FlavorScheme { FIXED, VARIABLE };
+    # # void setFlavorScheme(self, FlavorScheme scheme, int nf)
+    # # FlavorScheme flavorScheme(self)
 
 
 
